# mlx-lm-poc

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  mlx_rs_patch.rs  quantized.rs  tokenizer.rs
src/generate/: generator.rs  kv_cache.rs  mod.rs
src/mlxpack/: error.rs  loader.rs  mod.rs  reader.rs  writer.rs
src/models/: llama.rs  mistral.rs  mod.rs  qwen3.rs
