[package]
name = "mlx_lm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mlxpack"
path = "src/bin/mlxpack.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.0", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }
mlx-rs = { version = "0.25.2", features = ["metal", "accelerate"] }
mlx-macros = "0.25.2"
serde = "1.0.228"
serde_json = "1.0"
tokenizers = "0.22.1"
minijinja = { version = "2", features = ["loader"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
safetensors = "0.6.2"
